fixed spacing and styling of show page elements

--- a/sprint-3/scss/shows.scss
+++ b/sprint-3/scss/shows.scss
@@ -293,7 +293,10 @@ body{
 
             @include tablet{
                 display: flex;
-                
+            }
+
+            @include desktop{
+                margin-top: 10px;
             }
         }
     }
@@ -315,7 +318,7 @@ body{
             color: $silver;
             font-weight: normal;
             margin: 0 !important;
-            font-size: 14px;
+            font-size: 12px;
             width: 150px;
         }
 
@@ -324,7 +327,7 @@ body{
         }
 
         &--detail{
-            font-weight: lighter;
+            font-family: "Avenir-Light";
             font-size: 14px;
             margin: 0;
 
@@ -334,7 +337,7 @@ body{
 
             &--date{
                 font-size: 15px;
-                font-weight: normal;
+                font-family: "Avenir-Regular";
             }
         }
     }
